Remove API URL from git

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
-# Production (Vercel will use this)
-VITE_API_URL=https://your-backend-name.onrender.com/api
+# Production API URL - Set this in Vercel environment variables
+# Do not commit actual URL to git
+VITE_API_URL=
