Add Vercel domain to CORS allowed origins

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,5 +21,5 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.cleanwater=DEBUG
 
-# CORS Configuration (for development)
-app.cors.allowed-origins=http://localhost:5173,http://localhost:3000
+# CORS Configuration
+app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://cleanwater-reporter.vercel.app}
